--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "reactfire": "^2.0.3",
+    "store": "^2.0.12",
+    "styled-components": "^5.2.0",
+    "typeface-fredoka-one": "0.0.72"
   },
   "scripts": {
     "start": "react-scripts start",
