prod ready I guess 🤷🏻‍♂️

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "firebase": "^7.22.0",
+    "fontsource-comic-neue": "^3.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "reactfire": "^2.0.3",
     "store": "^2.0.12",
     "styled-components": "^5.2.0",
+    "typeface-comfortaa": "^1.1.4",
     "typeface-fredoka-one": "0.0.72"
   },
   "scripts": {
